# ai-trading-advisor

./: .env.example  .env.realdata  .gitignore  Dockerfile  Dockerfile.airflow  FAST_SIMULATION_IMPLEMENTATION.md  Makefile  QUICK_START_SUPABASE.md  README.md  README_DATABASE_SETUP.md  analysis_report.py  check_all_dags.sh  check_dags.sh  create_new_tables.py  dag_success_report.md  docker-compose.test.yml  docker-compose.yml  enable_real_data.py  final_fix.sh  init-db-simple.sql  init-db.sql  populate_data.sql  populate_market_data.py  populate_sample_data.py  pyproject.toml  requirements-airflow.txt  requirements-dev.txt  requirements.txt  setup_supabase_database.sh  update_market_prices.py  verify_tables.py  webserver_status_check.sh  webserver_status_check_with_activation.sh
.github/workflows/: trading-automation.yml
sql/: trading_simulator_schema.sql
src/: __init__.py  config.py  main.py
src/airflow_dags/: analysis_dag.py  analysis_pipeline.py  data_pipeline.py  (+12 more)
tests/: test_alert_manager.py  test_analysis_dag.py  test_analysis_engine.py  test_api_endpoints.py  test_api_integration.py  test_caching_manager.py  test_config.py  test_config_loader.py  test_core_functionality.py  test_data_collection_dag.py  test_data_collectors.py  test_data_integration.py  test_data_manager.py  test_data_pipeline.py  test_database.py  test_environment_utils.py  test_main.py  test_market_risk_adapter.py  test_pattern_recognition.py  test_portfolio_tracker.py  test_position_sizing.py  test_pydantic_validation.py  test_real_data_integration.py  test_sector_analysis.py  test_shared_utils.py  test_strategic_collectors.py  test_strategy_selection.py  test_technical_analysis.py  test_trading_dag.py  test_trading_engine.py  test_trend_analysis.py  test_user_profiling.py  test_user_profiling_production.py  test_volatility_triggers.py  test_websocket_streaming.py  test_weekly_pipeline.py
(+39 files in other folders)
